Updated files from annual holidays and also added the author of the project

--- a/managementpg2.html
+++ b/managementpg2.html
@@ -219,7 +219,7 @@
           <div class="logo">
             <img src="licence icon.png">
             <h2>HATProg</h2>
-            <p>Fullstack Web Developer</p>
+            <p>NEZERWA PRINCESS</p>
           </div> 
         </div>
         <div class="reminders">
