--- a/holiday.html
+++ b/holiday.html
@@ -23,7 +23,7 @@
         <div class="sidebar">
             <a href="#">
                 <span><i class="fa fa-plus" style="font-size:24px"></i></span>
-                <h3> Annual Holiday</h3>
+                <h3> Annual Leave</h3>
             </a>
             <a href="#">
                 <span> <i class="fa fa-stethoscope" style="font-size:24px"></i></span>
